[package]
name = "rust-auth-client"
version = "0.1.0"
authors = ["Aleksandr Koltovich <avkoltovich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
rpassword = "5.0"